--- a/packages/base/any/kernels/3.16-lts/configs/x86_64-all/x86_64-all.config
+++ b/packages/base/any/kernels/3.16-lts/configs/x86_64-all/x86_64-all.config
@@ -2170,6 +2170,7 @@ CONFIG_SENSORS_PMBUS=y
 # CONFIG_SENSORS_MAX16064 is not set
 # CONFIG_SENSORS_MAX34440 is not set
 CONFIG_SENSORS_DNI_DPS460=y
+CONFIG_SENSORS_TPS53679=y
 # CONFIG_SENSORS_MAX8688 is not set
 # CONFIG_SENSORS_UCD9000 is not set
 CONFIG_SENSORS_UCD9200=y
