Change automatically set kernel configs.
Signed-off-by: Michael Shych <michaelsh@mellanox.com>

--- a/packages/base/any/kernels/4.9-lts/configs/x86_64-all/x86_64-all.config
+++ b/packages/base/any/kernels/4.9-lts/configs/x86_64-all/x86_64-all.config
@@ -2890,7 +2890,7 @@ CONFIG_SND_HDA_POWER_SAVE_DEFAULT=0
 CONFIG_SND_HDA_CORE=y
 CONFIG_SND_HDA_I915=y
 CONFIG_SND_HDA_PREALLOC_SIZE=64
-CONFIG_SND_SPI=y
+# CONFIG_SND_SPI is not set
 CONFIG_SND_USB=y
 # CONFIG_SND_USB_AUDIO is not set
 # CONFIG_SND_USB_UA101 is not set
@@ -3745,7 +3745,7 @@ CONFIG_RAS=y
 #
 # CONFIG_ANDROID is not set
 # CONFIG_LIBNVDIMM is not set
-CONFIG_NVMEM=y
+CONFIG_NVMEM=m
 # CONFIG_STM is not set
 # CONFIG_INTEL_TH is not set
 
