--- a/packages/platforms/mellanox/arm64/arm64-mlnx-msn2700/onlp/builds/src/module/src/Makefile
+++ b/packages/platforms/mellanox/arm64/arm64-mlnx-msn2700/onlp/builds/src/module/src/Makefile
@@ -5,5 +5,5 @@
 ###############################################################################
 
 ucli:
-	@../../../../tools/uclihandlers.py arm64mlnx_msn2700_ucli.c
+	@../../../../tools/uclihandlers.py arm64_mlnx_msn2700_ucli.c
 
