--- a/packages/base/any/kernels/4.9-lts/configs/x86_64-all/x86_64-all.config
+++ b/packages/base/any/kernels/4.9-lts/configs/x86_64-all/x86_64-all.config
@@ -959,7 +959,9 @@ CONFIG_IP6_NF_MANGLE=y
 # CONFIG_L2TP is not set
 # CONFIG_BRIDGE is not set
 CONFIG_HAVE_NET_DSA=y
-# CONFIG_VLAN_8021Q is not set
+CONFIG_VLAN_8021Q=m
+# CONFIG_VLAN_8021Q_GVRP is not set
+# CONFIG_VLAN_8021Q_MVRP is not set
 # CONFIG_DECNET is not set
 # CONFIG_LLC2 is not set
 # CONFIG_IPX is not set
