1. Add 2 patches with mlxreg_io driver. 2. Enable mlxref_io module in kernel config. 3. Update local hw-management package
Signed-off-by: Michael Shych <michaelsh@mellanox.com>

Conflicts:
	REPO/stretch/packages/binary-amd64/hw-management_1.mlnx.onl.deb9_amd64.deb
	packages/base/any/kernels/4.9-lts/configs/x86_64-all/x86_64-all.config

--- a/packages/base/any/kernels/4.9-lts/configs/x86_64-all/x86_64-all.config
+++ b/packages/base/any/kernels/4.9-lts/configs/x86_64-all/x86_64-all.config
@@ -2117,7 +2117,7 @@ CONFIG_I2C_MUX=y
 #
 # CONFIG_I2C_MUX_PCA9541 is not set
 CONFIG_I2C_MUX_REG=y
-CONFIG_I2C_MUX_MLXCPLD=y
+CONFIG_I2C_MUX_MLXCPLD=m
 CONFIG_I2C_HELPER_AUTO=y
 CONFIG_I2C_SMBUS=y
 CONFIG_I2C_ALGOBIT=y
@@ -2172,7 +2172,7 @@ CONFIG_I2C_I801=y
 #
 # Other I2C/SMBus bus drivers
 #
-CONFIG_I2C_MLXCPLD=y
+CONFIG_I2C_MLXCPLD=m
 # CONFIG_I2C_STUB is not set
 # CONFIG_I2C_SLAVE is not set
 # CONFIG_I2C_DEBUG_CORE is not set
@@ -3179,7 +3179,7 @@ CONFIG_LEDS_CLASS=y
 #
 # CONFIG_LEDS_BLINKM is not set
 # CONFIG_LEDS_MLXCPLD is not set
-CONFIG_LEDS_MLXREG=y
+CONFIG_LEDS_MLXREG=m
 # CONFIG_LEDS_USER is not set
 # CONFIG_LEDS_NIC78BX is not set
 
@@ -3396,10 +3396,11 @@ CONFIG_EEEPC_LAPTOP=y
 # CONFIG_INTEL_PMC_IPC is not set
 # CONFIG_SURFACE_PRO3_BUTTON is not set
 # CONFIG_INTEL_PUNIT_IPC is not set
-CONFIG_MLX_PLATFORM=y
+CONFIG_MLX_PLATFORM=m
 # CONFIG_CHROME_PLATFORMS is not set
 CONFIG_MELLANOX_PLATFORM=y
-CONFIG_MLXREG_HOTPLUG=y
+CONFIG_MLXREG_HOTPLUG=m
+CONFIG_MLXREG_IO=m
 
 #
 # Hardware Spinlock drivers
